--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    apply plugin: 'com.android.application'
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
@@ -26,4 +27,8 @@ dependencies {
     //sends network requests for JSON
     compile 'com.squareup.picasso:picasso:2.5.2'
     //load remote images from network into image views
+    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.makeramen:roundedimageview:2.1.0'
+
+
 }
